# Lineage_Agent

./: .dockerignore  .env.example  .figmaexportrc.js  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.fly  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.json
design/: figma-tokens-full.json
docs/: AUDIT_PROMPT.md  AUDIT_REPORT.md  README.md  SUMMARY.md  WHITEPAPER.md  api-reference.md  features.md  getting-started.md
extension/: background.js  manifest.json
frontend/: .eslintrc.json  README.md  index.html  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
mobile/: .easignore  .env.example  .gitignore  DEVELOPER_BRIEFING.md  README.md  app.config.js  app.json  babel.config.js  crypto-rn-shim.js  eas.json  google-services.json  metro.config.js  package-lock.json  package.json  screens-preview.html  tailwind.config.js  tsconfig.json
scripts/: backup_db.sh  diag_scan.py  diag_timeout_test.py  extract_figma_tokens.py  register_helius_webhook.py  sync_figma_tokens.sh  test_bundle_live.py
src/: config.py  main.py
tests/: compare_trinity_vs_haiku.py  conftest.py  test_agent_preinjection.py  test_agent_service.py  test_ai_analyst.py  test_alert_routing.py  test_alert_service_unit.py  test_api.py  test_arq_queue.py  test_auth_service.py  (+66 more)
(+580 files in other folders)
