[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meme-lineage-agent"
version = "3.0.0"
description = "Detect memecoin lineage on Solana – find the root token and its clones."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.0",
    "httpx>=0.28",
    "fastapi>=0.130",
    "uvicorn[standard]>=0.40",
    "python-telegram-bot>=22",
    "numpy>=2.0",
    "imagehash>=4.3",
    "python-Levenshtein>=0.27",
    "pydantic>=2.0,<3.0",
    "slowapi>=0.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.1",
    "ruff",
    "mypy",
]

[project.scripts]
lineage-agent = "main:_cli_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
